bookmark icon bug fix on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -167,6 +167,7 @@ UTILITY CLASSES
   background-color: hsl(var(--clr-darker) / .5); 
   stroke: hsl(var(--clr-white));
   fill: none;
+  place-items: center;
 }
 
 .bookmark-icon:hover, .bookmark-icon:focus {
